issues fixed: PE-PW: Unwanted POST while drag and drop need to be converted to PUT, Some of the alphabets are truncating from down while dragging the Folders AND tests cannot be edited in your test tab

--- a/WebContent/styles/new-ui.css
+++ b/WebContent/styles/new-ui.css
@@ -499,7 +499,7 @@ span.glyphicon.glyphicon-info-sign {
   text-overflow: ellipsis;
   height:15px;
   margin-top: 9px;
-  line-height: 1.2em;
+  line-height: 1em;
 }
 
 .labelCaption{
